--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     // for generic logging rather than system out
     compile group: 'org.slf4j', name:'slf4j-api', version: '1.6.4'
     compile group: 'org.slf4j', name:'slf4j-simple', version: '1.6.4'
+    compile group: 'org.ow2.asm', name: 'asm', version: '5.0.3'
 
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
 }
