--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,12 @@ buildscript {
     }
     dependencies {
         classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
+        classpath 'org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.11'
     }
+}
+
+plugins {
+    id 'org.asciidoctor.convert' version '1.5.3'
 }
 
 apply plugin: 'groovy'
@@ -65,3 +70,22 @@ run {
 task newJar(type: ShadowJar) {
     from 'build/bytecode/main'
 }
+
+asciidoctorj {
+    version = '1.5.4'
+}
+
+asciidoctor {
+    dependsOn test
+    sourceDir = file('src/main/docs')
+    sources {
+        include 'index.adoc'
+    }
+    backends = ['html','pdf']
+    outputDir file('build/docs')
+    attributes \
+        'sourcedir': file(buildDir.path + "/docs/snippets"),
+        'source-highlighter': 'coderay'
+}
+
+build.dependsOn asciidoctor
