add more to the report, include bytecode report in docs, upgrade gradle wrapper version, and remove pdf warning from pdf output

--- a/build.gradle
+++ b/build.gradle
@@ -85,7 +85,10 @@ asciidoctor {
     outputDir file('build/docs')
     attributes \
         'sourcedir': file(buildDir.path + "/docs/snippets"),
-        'source-highlighter': 'coderay'
+        'source-highlighter': 'coderay',
+        'toc': '',
+        'idprefix': '',
+        'idseparator': '-'
 }
 
 build.dependsOn asciidoctor
