--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,7 @@ asciidoctor {
     outputDir file('build/docs')
     attributes \
         'sourcedir': file(buildDir.path + "/docs/snippets"),
+        'reportdir': file(buildDir.path + "/docs/bytecode/reports"),
         'source-highlighter': 'coderay',
         'toc': '',
         'idprefix': '',
