--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,8 @@ asciidoctor {
         'source-highlighter': 'coderay',
         'toc': '',
         'idprefix': '',
-        'idseparator': '-'
+        'idseparator': '-',
+        'allow-uri-read': true
 }
 
 build.dependsOn asciidoctor
